@@ -56,7 +56,7 @@ Feature: Javascript stuff
         And I open data/javascript/window_open.html in a new tab
         And I run :click-element id open-normal
         And I wait for "Changing title for idx 2 to 'about:blank'" in the log
-        And I run :buffer window_open.html
+        And I run :tab-select window_open.html
         And I run :click-element id close-twice
         And I wait for "Focus object changed: *" in the log
         And I wait for "[*] window closed" in the log
