@@ -7,5 +7,5 @@
 
 <body>
     <p>This page should change its title after 3s.</p>
-    <p>When opening the :buffer completion ("gt"), the title should update while it's open.</p>
+    <p>When opening the :tab-select completion ("gt"), the title should update while it's open.</p>
 </body>
