@@ -812,7 +812,7 @@ def test_tab_completion(qtmodeltester, fake_web_tab, win_registry,
     tabbed_browser_stubs[1].widget.tabs = [
         fake_web_tab(QUrl('https://wiki.archlinux.org'), 'ArchWiki', 0),
     ]
-    model = miscmodels.buffer()
+    model = miscmodels.tabs()
     model.set_pattern('')
     qtmodeltester.check(model)
 
@@ -839,7 +839,7 @@ def test_tab_completion_delete(qtmodeltester, fake_web_tab, win_registry,
     tabbed_browser_stubs[1].widget.tabs = [
         fake_web_tab(QUrl('https://wiki.archlinux.org'), 'ArchWiki', 0),
     ]
-    model = miscmodels.buffer()
+    model = miscmodels.tabs()
     model.set_pattern('')
     qtmodeltester.check(model)
 
@@ -873,7 +873,7 @@ def test_tab_completion_not_sorted(qtmodeltester, fake_web_tab, win_registry,
         fake_web_tab(QUrl(tab[1]), tab[2], idx)
         for idx, tab in enumerate(expected)
     ]
-    model = miscmodels.buffer()
+    model = miscmodels.tabs()
     model.set_pattern('')
     qtmodeltester.check(model)
 
@@ -897,7 +897,7 @@ def test_tab_completion_tabs_are_windows(qtmodeltester, fake_web_tab,
     ]
 
     config_stub.val.tabs.tabs_are_windows = True
-    model = miscmodels.buffer()
+    model = miscmodels.tabs()
     model.set_pattern('')
     qtmodeltester.check(model)
 
@@ -911,8 +911,8 @@ def test_tab_completion_tabs_are_windows(qtmodeltester, fake_web_tab,
     })
 
 
-def test_other_buffer_completion(qtmodeltester, fake_web_tab, win_registry,
-                                 tabbed_browser_stubs, info):
+def test_other_tabs_completion(qtmodeltester, fake_web_tab, win_registry,
+                               tabbed_browser_stubs, info):
     tabbed_browser_stubs[0].widget.tabs = [
         fake_web_tab(QUrl('https://github.com'), 'GitHub', 0),
         fake_web_tab(QUrl('https://wikipedia.org'), 'Wikipedia', 1),
@@ -922,7 +922,7 @@ def test_other_buffer_completion(qtmodeltester, fake_web_tab, win_registry,
         fake_web_tab(QUrl('https://wiki.archlinux.org'), 'ArchWiki', 0),
     ]
     info.win_id = 1
-    model = miscmodels.other_buffer(info=info)
+    model = miscmodels.other_tabs(info=info)
     model.set_pattern('')
     qtmodeltester.check(model)
 
@@ -935,8 +935,8 @@ def test_other_buffer_completion(qtmodeltester, fake_web_tab, win_registry,
     })
 
 
-def test_other_buffer_completion_id0(qtmodeltester, fake_web_tab,
-                                     win_registry, tabbed_browser_stubs, info):
+def test_other_tabs_completion_id0(qtmodeltester, fake_web_tab,
+                                   win_registry, tabbed_browser_stubs, info):
     tabbed_browser_stubs[0].widget.tabs = [
         fake_web_tab(QUrl('https://github.com'), 'GitHub', 0),
         fake_web_tab(QUrl('https://wikipedia.org'), 'Wikipedia', 1),
@@ -946,7 +946,7 @@ def test_other_buffer_completion_id0(qtmodeltester, fake_web_tab,
         fake_web_tab(QUrl('https://wiki.archlinux.org'), 'ArchWiki', 0),
     ]
     info.win_id = 0
-    model = miscmodels.other_buffer(info=info)
+    model = miscmodels.other_tabs(info=info)
     model.set_pattern('')
     qtmodeltester.check(model)
 
